# workrave

./: .clang-format  .clang-tidy  .clangd  .cvsignore  .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  ChangeLog  INSTALL  INSTALL.windows.txt  Info.plist.in  LICENSES.md  Makefile.am  NEWS  README  README.md  README.transifex  README.win32  ROADMAP  SConstruct  TODO  TODO.rewrite  acinclude.m4  autogen.sh  autogencross.sh  autogenosx.sh  autogenosxfw.sh  autogenwin32.sh  changes.yaml  config.xml  configure.ac  makeapp.sh  out  pt_BR.po  testconf.py  vcpkg-configuration.json  vcpkg.json  (+1 more)
arch/: Makefile.am  Runnable.hh  Time.hh  Util.cc  Util.hh  debug.cc  debug.hh  nls.c  nls.h  timeutil.h  util.h
arch/unix/: Condition.cc  Condition.hh  Makefile.am  Mutex.hh  Runnable.hh  Signal.hh  Sound.cc  Sound.hh  Thread.cc  Thread.hh
arch/win32/: Makefile.am  Mutex.hh  Sound.hh  Thread.cc  Thread.hh  gettimeofday.h
backend/: CMakeLists.txt  Makefile.am
backend/include/: ActivityMonitorListener.hh  AppInterface.hh  BreakInterface.hh  BreakResponseInterface.hh  ConfiguratorInterface.hh  ConfiguratorListener.hh  CoreConfig.hh  CoreEventListener.hh  CoreFactory.hh  CoreInterface.hh  CoreTypes.hh  DistributionLogListener.hh  DistributionManagerInterface.hh  Harpoon.hh  IApp.hh  IBreak.hh  IBreakResponse.hh  IConfigurator.hh  IConfiguratorListener.hh  ICore.hh  ICoreEventListener.hh  ICoreHooks.hh  IDistributionManager.hh  ILinkEventListener.hh  INetwork.hh  IStatistics.hh  ITimer.hh  LinkEvent.hh  Makefile.am  ResolveConfigurationLinkEvent.hh  StatisticsInterface.hh  TimerInterface.hh  enum.h
backend/src/: .gitignore  ActivityLinkEvent.cc  ActivityLinkEvent.hh  ActivityMonitor.cc  ActivityMonitor.hh  ActivityMonitorInterface.hh  ActivityMonitorListener.hh  BinaryArchive.cc  BinaryArchive.hh  Break.cc  Break.hh  BreakConfig.cc  BreakConfig.hh  BreakControl.cc  BreakControl.hh  BreakDBus.cc  BreakDBus.hh  BreakLinkEvent.cc  BreakLinkEvent.hh  BreakStateModel.cc  BreakStateModel.hh  BreakStatistics.cc  BreakStatistics.hh  BreaksControl.cc  BreaksControl.hh  ByteStream.cc  ByteStream.hh  ByteStream.icc  CMakeLists.txt  ConfigBackendAdapter.hh  ConfigurationLinkEvent.cc  ConfigurationLinkEvent.hh  Configurator.cc  Configurator.hh  ConfiguratorFactory.cc  ConfiguratorFactory.hh  Core.cc  Core.hh  CoreConfig.cc  CoreDBus.cc  (+141 more)
backend/test/: .gitignore  ActivityMonitorStub.cc  ActivityMonitorStub.hh  CMakeLists.txt  IntegrationTests.cc  Makefile.am  SimulatedTime.hh  Test.cc  Test.hh  TimerTests.cc  Workrave.cc  Workrave.hh  cloud.cc  cloud_test.cc  fog.cc  history.py  networking.py  workrave.ini  workrave_test.cc  workrave_test_base.py
common/src/: DBus-freedesktop.cc  DBus-gio.cc  DBus.cc  DBusBinding-gio.cc  DBusBinding.cc  DBusProxy-gio.cc  DayTimePred.cc  Diagnostics.cc  GlibThread.cc  Locale.cc  Makefile.am  SConscript  StringUtil.cc  TimeSource.cc  Trackable.cc  UUID.cc  Util.cc  WRID.cc  WeekTimePred.cc  debug.cc  glibnls.c  nls.c
doc/: Makefile.am  faq.xml  intro.xml  manual.xml  manual.xsl
frontend/common/: CMakeLists.txt  Makefile.am
frontend/data/: CMakeLists.txt  Makefile.am
frontend/gtkmm/: CMakeLists.txt  Makefile.am
frontend/qt5/: CMakeLists.txt
gui/: BreakControl.cc  BreakControl.hh  BreakInterface.hh  BreakResponseInterface.hh  BreakWindowInterface.hh  Exercise.cc  Exercise.hh  ExercisesParser.cc  ExercisesParser.hh  GUIControl.cc  GUIControl.hh  GUIFactoryInterface.hh  Makefile.am  PreludeWindowInterface.hh  SoundPlayer.cc  SoundPlayer.hh  SoundPlayerInterface.hh  Statistics.cc  Statistics.hh  Text.cc  Text.hh
gui/gnome/: .cvsignore  GNOME_WorkraveApplet.xml  GNOME_WorkraveApplet.xml.in  GNOME_WorkraveApplet_Factory.server.in  Makefile.am  Makefile.in  Workrave-Applet.idl  Workrave-Applet.server.in.in  Workrave-Control.idl  Workrave-Control.server.in.in  WorkraveApplet.c  WorkraveApplet.cc  WorkraveApplet.h  WorkraveAppletControl.c  WorkraveAppletControl.h  workrave-applet.c
gui/gtkmm/: AppletPreferencePage.cc  AppletPreferencePage.hh  AppletWindow.cc  AppletWindow.hh  BreakControl.cc  BreakControl.hh  BreakInterface.hh  BreakResponseInterface.hh  BreakWindow.cc  BreakWindow.hh  BreakWindowInterface.hh  CollectiveJoinDialog.cc  CollectiveJoinDialog.hh  CollectivePreferencePage.cc  CollectivePreferencePage.hh  DailyLimitWindow.cc  DailyLimitWindow.hh  Dispatcher.cc  Dispatcher.hh  EventLabel.cc  ExercisesDialog.cc  ExercisesDialog.hh  ExercisesPanel.cc  ExercisesPanel.hh  Frame.cc  Frame.hh  GUI.cc  GUI.hh  GUIControl.cc  GUIControl.hh  GUIFactoryInterface.hh  GnomeSoundPlayer.cc  GnomeSoundPlayer.hh  GtkUtil.cc  GtkUtil.hh  GtkmmGUI.cc  GtkmmGUI.hh  Hig.cc  Hig.hh  IconListCellRenderer.cc  (+53 more)
images/: Makefile.am  restbreak.xcf
libs/: CMakeLists.txt  Makefile.am
po/: .cvsignore  .gitignore  CMakeLists.txt  ChangeLog  LINGUAS  Makefile.in.in  Makevars  POTFILES-QML.in  POTFILES-cmake.in  POTFILES.in  POTFILES.skip  bg.po  ca.po  cs.po  da.po  de.mo  de.po  el.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  ko.po  lt.po  nb.po  nl.po  no.po  pl.mo  pl.po  (+15 more)
sounds/: Makefile.am  workrave.soundlist
src/: ActivityMonitor.cc  ActivityMonitor.hh  ActivityMonitorInterface.hh  ActivityMonitorListenerInterface.hh  ActivityStateMonitor.cc  ActivityStateMonitor.hh  AudioInterface.hh  CMakeLists.txt  Configurator.cc  Configurator.hh  ConfiguratorListener.hh  Control.cc  Control.hh  ControlInterface.cc  ControlInterface.hh  DayTimePred.cc  DayTimePred.hh  DistributedStateInterface.hh  DistributionClientMessageInterface.hh  DistributionLink.hh  DistributionLinkListener.hh  DistributionLogListener.hh  DistributionManager.cc  DistributionManager.hh  DistributionSocketLink.cc  DistributionSocketLink.hh  DistributionSocketLink2.cc  DistributionSocketLink2.hh  FakeActivityMonitor.hh  GConfConfigurator.cc  GConfConfigurator.hh  GNetSocketDriver.cc  GNetSocketDriver.hh  GUIFactory.cc  GUIFactory.hh  GUIInterface.hh  IdleLogManager.cc  IdleLogManager.hh  InputMonitor.cc  InputMonitor.hh  (+24 more)
(+3480 files in other folders)
